bugfixed for pointy selector being hidden behind arrow

--- a/client/src/SCSS/common/mixins.scss
+++ b/client/src/SCSS/common/mixins.scss
@@ -86,7 +86,6 @@
         position:relative;
         width: 7%;
         height: 100%;
-        z-index: 1;
         background-color: aquamarine;
 
         &::before {
