--- a/client/src/SCSS/components/MyProfile/profilebody.scss
+++ b/client/src/SCSS/components/MyProfile/profilebody.scss
@@ -79,7 +79,7 @@
                             height:1.5vh;
                             background-color: $hovered;
                             clip-path: polygon(0vw .25vh,1.5vw 0.75vh,0vw 1.5vh);
-                            z-index: 2;
+                            z-index: 5;
     
                         }
                         .borderElement{
